fix: center the heading on mobile view

--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,12 @@
 }
 .wrapper {
     width: 100%;
-    padding: 1.5em 0;
+    padding: 1.5em 1em;
     background-color: #464444;
     border-radius: 10px;
+}
+h1 {
+    text-align: center;
 }
 .wrap {
     position: relative;
